<resources>
    <!-- main source-->
    <string-array name="array_name">
        <item>Tất cả</item>
        <item>Đang thực hiện</item>
        <item>Đã hoàn thành</item>
        <item>Bị hủy</item>
    </string-array>
    <string name="runtime_permissions_txt">Vui lòng cấp quyền cho ứng dụng.</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="quick_help">Trợ giúp nhanh</string>
    <string name="mail_box">Hòm thư góp ý</string>
    <string name="contact_help">Liên hệ tổng đài</string>
    <string name="user_soicity">Cộng đồng người dùng</string>
    <string name="count_text">lượt sử dụng</string>
    <string name="rating_2_star">Cố gắng không ngừng</string>
    <string name="rating_3_star">Khởi đầu may mắn</string>
    <string name="rating_4_star">Luôn luôn chăm chỉ</string>
    <string name="rating_5_star">Đối tác tuyệt vời!</string>
    <string name="app_name">Here</string>
    <string name="chosse_start_point">Chọn điểm đi</string>
    <string name="stop_poit">Điểm dừng</string>
    <string name="destination_point">Điểm đến</string>
    <string name="welcome">Kết nối với Here</string>
    <string name="connect_soicity">Hoặc kết nối với mạng xã hội</string>
    <string name="input_phone_number">Nhập số điện thoại di động</string>
    <string name="valid_phone_number">Số điện thoại này không hợp lệ</string>
    <string name="verify_problem">Tôi đang gặp sự cố</string>
    <string name="error_happened">Có lỗi xảy ra!</string>
    <string name="verify_code">Nhập mã đã được gửi đến số điện thoại <b>%1$s</b>. Hãy chắc rằng số điện thoại trên là của bạn.</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="web_signup">Đăng ký trên website</string>
    <string name="not_support_function">Chức năng này chưa được hỗ trợ</string>
    <string name="wrong_verify_code">Mã xác nhận không đúng!</string>
    <string name="choose_account">Chọn tài khoản</string>
    <string name="facebook">Facebook</string>
    <string name="verify_information">Xác nhận thông tin của bạn</string>
    <string name="first_name">Tên</string>
    <string name="second_name">Họ</string>
    <string name="email">Email</string>
    <string name="not_null">Không được để trống</string>
    <string name="phone">Số điện thoại di động</string>
    <string name="google">Google</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="policy_accept">Bằng cách tiếp tục, tôi xác nhận rằng tôi đã đọc và đồng ý với\u0020</string>
    <string name="term_title">Điều khoản \u0026 điều kiện</string>
    <string name="policy_title">Chính sách quyền riêng tư.</string>
    <string name="and">\u0020và\u0020</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="wellcom_back">Xin chào</string>
    <string name="user_login">Tài khoản khách hàng</string>
    <string name="driver_login">Tài khoản tài xế</string>
    <!--item menu -->
    <string name="menu_wallet">Ví tài khoản</string>
    <string name="menu_history">Lịch sử hoạt động</string>
    <string name="menu_help">Hỗ trợ</string>
    <string name="menu_share">Giới thiệu bạn bè</string>
    <string name="menu_noti">Thông báo</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_mailbox">Hòm thư</string>
    <string name="menu_driver">Lái xe cùng Here</string>
    <string name="menu_policy">Hỗ trợ</string>
    <string name="menu_contact">Tài xế ưa thích</string>
    <string name="default_info_title">Địa điểm mặc định</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="enter_request_form">Vui lòng điền thông tin đơn hàng vào mẫu đơn này.</string>

    <!--firebase aunthencation-->
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Gửi lại mã</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="tab_text_1">Thông báo</string>
    <string name="tab_text_2">Khuyến mãi</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_favorite_driver">FavoriteDriverActivity</string>
    <string name="title_activity_history_user">HistoryUserActivity</string>
    <string name="title_activity_history_detail">HistoryDetail</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_mail_box">MailBox</string>
    <string name="title_activity_vehicle_detail">VehicleDetailActivity</string>
    <string name="title_activity_driver_working">DriverWorkingActivity</string>
</resources>
