<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity">
    <!--first launch show-->
    <FrameLayout
        android:id="@+id/frame"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:visibility="visible">

        </ScrollView>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">

            <FrameLayout
                android:id="@+id/framTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.62"
                android:background="@drawable/bak">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.38"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:text="@string/welcome"
                    android:textColor="@color/blacktxt"
                    android:textSize="26dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.rilixtech.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></com.rilixtech.CountryCodePicker>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/phone_number_edt"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_phone_number"
                        android:inputType="phone" />
                </TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/connect_soicity"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layoutstart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>